insert functions and complete backend

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://hirun:2002@studentmanagement.9bc3y.mongodb.net/?retryWrites=true&w=majority&appName=StudentManagement
+MONGODB_URL=mongodb+srv://hirun:2002@studentmanagement.9bc3y.mongodb.net/student_db?retryWrites=true&w=majority&appName=StudentManagement
